// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/DigitalProduct/Detail/elements/UpdateStatusForm/component render 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={false}
>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "padding": "16px 24px",
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        align="center"
        item={true}
        xs={12}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="body1"
          weight="normal"
        >
          Please give note of update status
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <TextField
          control={Object {}}
          disabled={false}
          error={false}
          helperText=""
          label="Note"
          maxLength={160}
          minRows={4}
          multiline={true}
          name="note"
          placeholder="Please describe the reason.."
          required={true}
          shouldUnregister={false}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="normal"
        >
          Once you updated the status,
              it will be process and data will be sent to customer automatically
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        align="center"
        className="makeStyles-boxButton-1"
      >
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          CANCEL
        </Button>
          
        <Button
          disabled={true}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[Function]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          type="submit"
          variant="filled"
        >
          SUBMIT
        </Button>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</WithStyles(Component)>
`;

exports[`src/containers/ServiceAssurance/DigitalProduct/Detail/elements/UpdateStatusForm/component render isDirty true 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={false}
>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "padding": "16px 24px",
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        align="center"
        item={true}
        xs={12}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="body1"
          weight="normal"
        >
          Please give note of update status
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <TextField
          control={Object {}}
          disabled={false}
          error={false}
          helperText=""
          label="Note"
          maxLength={160}
          minRows={4}
          multiline={true}
          name="note"
          placeholder="Please describe the reason.."
          required={true}
          shouldUnregister={false}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="normal"
        >
          Once you updated the status,
              it will be process and data will be sent to customer automatically
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        align="center"
        className="makeStyles-boxButton-3"
      >
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          CANCEL
        </Button>
          
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[Function]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          type="submit"
          variant="filled"
        >
          SUBMIT
        </Button>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</WithStyles(Component)>
`;

exports[`src/containers/ServiceAssurance/DigitalProduct/Detail/elements/UpdateStatusForm/component render step updateProgress 1`] = `
<WithStyles(Component)
  maxWidth="xs"
  onClose={[MockFunction]}
  open={true}
>
  <form>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={2}
      style={
        Object {
          "padding": "16px 24px",
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        align="center"
        item={true}
        xs={12}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="body1"
          weight="normal"
        >
          Please give note of update status
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <TextField
          control={Object {}}
          disabled={false}
          error={false}
          helperText=""
          label="Note"
          maxLength={160}
          minRows={4}
          multiline={true}
          name="note"
          placeholder="Please describe the reason.."
          required={true}
          shouldUnregister={false}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={12}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="normal"
        >
          Once you updated the status,
              it will be process and data will be sent to customer automatically
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        align="center"
        className="makeStyles-boxButton-2"
      >
        <Button
          disabled={false}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          CANCEL
        </Button>
          
        <Button
          disabled={true}
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[Function]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          type="submit"
          variant="filled"
        >
          SUBMIT
        </Button>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</WithStyles(Component)>
`;
